trunk
=====
* added verifyCorrelationMatrix to mxData. See http://openmx.psyc.virginia.edu/issue/2011/06/error-checking-correlation-matrices
* added omxSelectRowsAndCols, omxSelectRows and omxSelectCols documentation
* fixed model flattening to keep track of confidence intervals in submodels
* fixed a bug in omxParallelCI() introduced by previous change

Beta Release 999.0.0-1661 (May 20, 2011)
========================================
* turn off jiggling of free parameters with starting values of 0.0 when useOptimizer=FALSE
* allow non-RAM objective functions in RAM model
* change model type names to 'default' and 'RAM'
* no longer explicitly transforming RAM + raw data models into FIML models
* fixed bug in MxMatrix indexing operator

Pre-Release 999.0.0-1609 (April 7, 2011)
========================================
* added argument 'threshnames' to mxFIMLObjective()
* eliminated "initialize" method for MxMatrix objects
* added "omxCreateMatrix" method for MxMatrix objects
* renaming majority of omx* functions to imx* functions. See http://openmx.psyc.virginia.edu/thread/761
* added error checking to mxOption() function
* added "Optimality tolerance" to mxOption() selection
* added 'lbound' and 'ubound' columns to summary() output of free parameters
* added asterisks to the 'lbound' and 'ubound' columns when feasibility tolerance is met
* added "omxNot" function to the set of available mxAlgebra() function
* added "omxSelectRows", "omxSelectCols", and "omxSelectRowsAndCols" as mxAlgebra operators()
* updated interface of mxRowObjective
* in ML objective: expected covariance matrix and observed covariance matrix must have identical dimnames
* in RAM and ML objectives: the observed means vector must have column names
* added "mean" function to the set of available mxAlgebra() functions
* added slots "expCov" and "expMean" to the MxRAMObjective function
* added useOptimizer option to mxRun.